# auto_edit_project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  main.cpp  readme.txt  settings.txt
.github/workflows/: c-cpp.yml
Testing/Temporary/: CTestCostData.txt
cmake/: FindFFmpeg.cmake
include/: main.hpp
include/src/: app.hpp  credential_encryption.hpp  ffempeg_wrapper.hpp  io_util.hpp  settings.hpp  twitch_api.hpp  video.hpp  video_editor.hpp  youtube_api.hpp
include/src/api/: api.hpp  twitch_api.hpp  youtube_api.hpp
include/test/unit/: test_credential_encryption.hpp  test_video_editor.hpp
scripts/: compile.sh
src/: api.cpp  app.cpp  credential_encryption.cpp  ffempeg_wrapper.cpp  io_util.cpp  settings.cpp  twitch_api.cpp  video.cpp  video_editor.cpp  youtube_api.cpp
src/api/: api.cpp  twitch_api.cpp  video_editor.cpp  youtube_api.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  auto_edit_tests-b12d07c_include.cmake  auto_edit_tests-b12d07c_tests.cmake  cmake_install.cmake  list.txt
test/unit/: test_credential_encryption.cpp  test_video_editor.cpp
